<resources>
    <string name="app_name">FoodManics</string>

    <!-- Acticity Titles specific -->
    <string name="title_activity_signinscreen">SignIn/SignUp</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="title_activity_home__page">Home_Page</string>
    <string name="title_activity_payment_page">PaymentPage</string>
    <string name="title_activity_item_selection">Item Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_location">Location</string>

    <!--Common Menu Specific-->
    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="locate_us">Locate Us in Maps</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="next_page_icon">NextPage</string>
    <string name="menu">Menu</string>

    <!--LocationMap Menu specific-->
    <string name="search_map">Search Any Location</string>
    <string name="change_map_view">Change View(Satellite/Normal)</string>

    <!--Item Selection page specific-->
    <string name="rating">Rate it</string>
    <string name="comment">Write a Comment</string>


    <string name="MenuHeader">Full Menu</string>

    <!--Navigation drawer specific-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchMapButton">Search Map</string>
    <string name="title_activity_app_loading">AppLoading</string>


</resources>
