<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffaaa696">

    <item android:id="@+id/aboutus"
        android:title="@string/about_us"
        app:showAsAction="never"/>

    <item android:id="@+id/contctus"
        android:title="@string/contact_us"
        app:showAsAction="never" />

    <item android:id="@+id/locateus"
        android:title="@string/locate_us"
        app:showAsAction="never" />

    <item android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/nextPageIcon"
        android:title="@string/next_page_icon"
        android:icon="@drawable/ic_media_play"
        app:showAsAction="always" />


</menu>
